[package]
name = "mod1"
version = "0.1.0"
authors = ["guilhem smith <smith.guilhem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
glutin = "0.26"
glam = "0.16"
rand = "0.8"
# noise = "0.7"

[build-dependencies]
fs_extra = "1.2"